--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,19 @@
 
     <version>0.1.0-${build.number}</version>
 
-    <build>
-        <plugins>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
 
     <dependencies>
         <dependency>
