Added license to pom file.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
     <name>openbmp-api-message</name>
     <url>http://www.openbmp.org</url>
 
+    <licenses>
+        <license>
+            <name>Eclipse Public License v1.0</name>
+            <url>http://www.eclipse.org/legal/epl-v10.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <properties>
         <build.number>SNAPSHOT</build.number>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
