--- a/examples/spring-cloud-stream-sink/pom.xml
+++ b/examples/spring-cloud-stream-sink/pom.xml
@@ -12,9 +12,9 @@
 
 	<properties>
 		<start-class>demo.SinkApplication</start-class>
-		<spring-cloud-version>1.0.2.RELEASE</spring-cloud-version>
-		<spring-framework-version>4.3.1.RELEASE</spring-framework-version>
-		<spring-boot-version>1.3.6.RELEASE</spring-boot-version>
+		<spring-cloud-version>1.1.0.RELEASE</spring-cloud-version>
+		<spring-framework-version>4.3.3.RELEASE</spring-framework-version>
+		<spring-boot-version>1.4.1.RELEASE</spring-boot-version>
 		<openbmp-api-version>0.1.0-SNAPSHOT</openbmp-api-version>
 	</properties>
 
@@ -62,6 +62,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
             </plugin>
 		</plugins>
 	</build>
